retrofit+okhttp3+rxandroid搭建网络框架  数据库搭建  首界面搭建
retrofit+okhttp3+rxandroid搭建网络框架抓取服务器json数据解析导入Sqlite 数据库
recycleView+cardView+轮播图控件搭建推荐首界面

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -14,9 +14,34 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/tool_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways" />
+            app:layout_scrollFlags="scroll|enterAlways">
+            <LinearLayout
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+               >
+                <ImageView
+                    android:layout_marginLeft="5dp"
+                    android:src="@mipmap/bili_default_avatar"
+                    android:id="@+id/user_avatar_toolbar"
+                    android:layout_width="34dp"
+                    android:layout_height="34dp" />
+                <TextView
+                    android:id="@+id/user_nickname_toolbar"
+                    android:textColor="@color/white"
+                    android:gravity="center_vertical"
+                    android:text="未登录"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="8dp"
+                    android:singleLine="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
@@ -24,7 +49,11 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             app:tabIndicatorColor="?attr/colorAccent"
-            app:tabMode="fixed">
+            app:tabMode="fixed"
+            app:tabMinWidth="50dp"
+            app:tabIndicatorHeight="3dp"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextColor="@color/white_trans">
 
         </android.support.design.widget.TabLayout>
 
